<resources>
    <string name="app_name">P2Photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="p2photo">P2Photo</string>
    <string name="create_album">Create Album</string>
    <string name="find_users">Find Users</string>
    <string name="add_photos_to_albums">Add Photos to Albums</string>
    <string name="add_users_to_albums">Add Users to Albums</string>
    <string name="view_albums">View Your Albums</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="album_name">Album Name</string>
    <string name="create">Create</string>
    <string name="find">Find</string>
    <string name="back">Back</string>
    <string name="your_albums">Your Albums</string>
    <string name="add_users">Add/List Users</string>
    <string name="add_photos">Add Photos</string>
    <string name="placeholder">placeholder</string>
    <string name="add">Add</string>
    <string name="can_add">Users You Can Add To Album:</string>
    <string name="cant_add">Users That You Share Ownership With:</string>
    <string name="album_photo">Album Photo</string>
    <string name="select_application_mode">Select Application Mode</string>
    <string name="cloud_storage">Cloud Storage</string>
    <string name="wifi_direct">WiFi-Direct</string>
</resources>
